# UMLAgents

./: .gitignore  AGENTS.md  IDENTITY.md  README.md  TOOLS.md  USER.md
umlagents/: .env.example  .gitignore  CHANGES_SUMMARY.md  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  MANIFEST.in  QUICK_TEST.md  README.md  SETUP_GUIDE.md  architect_function.py  cli.py  docker-compose.yml  generate_newtext.py  inspect_db.py  migrate_schema.py  new_command.txt  pyproject.toml  setup.py  test_api.py  test_event_integration.py  test_orchestrator.py  test_orchestrator2.py  test_web_endpoints.py  test_week1.py  test_week3.py  update_cli.py  update_phase.py
umlagents/.github/workflows/: test.yml
umlagents/docs/: architecture.md  design.md
umlagents/examples/: dice-game-example.yaml  healthcare-appointment.yaml
umlagents/schema/: umlagents-schema-v0.1.yaml
umlagents/umlagents/: __init__.py  cli.py
umlagents/umlagents/agents/: __init__.py  _extract.py  architect_agent.py  ba_agent.py  base.py  deployer_agent.py  design_agent.py  developer_agent.py  frontend_agent.py  frontend_template.html  orchestrator_agent.py  tester_agent.py
umlagents/umlagents/db/: models.py
umlagents/umlagents/integration/dice_game/: integrate.py
umlagents/umlagents/llm/: __init__.py  backend.py
umlagents/umlagents/utils/: __init__.py  events.py  logging.py  validation.py
umlagents/web/: app.py
umlagents/web/templates/: index.html
